<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/calcularNotaAnualActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp">

    <EditText
        android:id="@+id/nota_anual_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/nota1"
        android:inputType="number" />

    <EditText
        android:id="@+id/nota_anual_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/nota2"
        android:inputType="number" />

    <EditText
        android:id="@+id/nota_anual_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/nota3"
        android:inputType="number" />

    <EditText
        android:id="@+id/nota_anual_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:hint="@string/nota4"
        android:inputType="number" />

    <Button
        android:id="@+id/btnCalcular_anual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/btncalcular"
        android:textColor="#F5F5F5"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/notanecessaria_anual"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:visibility="invisible" />

</LinearLayout>