<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:weightSum="1">

    <EditText
        android:id="@+id/tarefanome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tarefanome"
        android:inputType="text"
        android:maxLength="50" />

    <EditText
        android:id="@+id/tarefadescricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tarefadescricao"
        android:inputType="textLongMessage" />

    <EditText
        android:id="@+id/tarefadata"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/tarefadata"
        android:inputType="text" />

</LinearLayout>