<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="me.davidnery.meusuap.MainActivity">

    <GridLayout
        android:columnCount="2"
        android:rowCount="2"
        android:alignmentMode="alignMargins"
        android:columnOrderPreserved="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="14dp">

        <!-- Linha 1 -->

        <!-- Coluna 1 -->

        <android.support.v7.widget.CardView
            android:id="@+id/card1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="15dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:src="@drawable/ic_exposure_plus_1_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/calcularnotas"
                    android:textSize="20dp"
                    android:textColor="@color/colorAccent"
                    android:textAlignment="center" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!-- Coluna 2 -->

        <android.support.v7.widget.CardView
            android:id="@+id/card2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="15dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:src="@drawable/ic_people_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alunossalvos"
                    android:maxLines="2"
                    android:textSize="20dp"
                    android:textColor="@color/colorAccent"
                    android:textAlignment="center" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!-- Linha 2 -->

        <!-- Coluna 1 -->

        <android.support.v7.widget.CardView
            android:id="@+id/card3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="15dp"
            android:layout_marginRight="15dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:src="@drawable/ic_build_black_24dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/configurar"
                    android:maxLines="2"
                    android:textSize="20dp"
                    android:textColor="@color/colorAccent"
                    android:textAlignment="center" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <!--Coluna 2-->

        <!-- <android.support.v7.widget.CardView
            android:id="@+id/card4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_gravity="center_horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:src="@drawable/ic_exposure_plus_1_black_24dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/calcularnotas"
                    android:textSize="20dp"
                    android:textColor="@color/colorAccent"
                    android:textAlignment="center"/>

            </LinearLayout>

        </android.support.v7.widget.CardView> -->

    </GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:gravity="bottom|center"
        android:padding="20dp">

        <TextView
            android:id="@+id/author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desenvolvido" />

    </LinearLayout>

</LinearLayout>
